[package]
name = "chkdns"
version = "0.1.0"
edition = "2024"
description = "Query DNS root servers for a domain and print the referral response."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cienvita/chkdns"
readme = "README.md"

[dependencies]
hickory-client = "0.25.2"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net", "time"] }
